fixed navbar spacing

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,10 @@ p {
 		padding-left: 4px;
 	}
 
+	.navbar-nav {
+		margin: 0px;
+	}
+
 	#on-off-wrap {
 		margin-right: 5px;
 	}
